reviewed up to end of operational monitoring section at beginning

--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -7,7 +7,7 @@ Verification and validation are important to earning trust and gaining confidenc
 
 Autonomous systems are significantly more complex than their non-autonomous counterparts, and therefore more difficult to validate. Whereas a non-autonomous system is usually designed only to deliver a given servo-mechanical or information processing relationship from inputs to outputs (its function), the problem of autonomy is concerned with how that function is used to achieve one or more situated tasks within the environment, which have specified goals that must be achieved. The state of the environment is as much a part of the validation problem of an autonomous system as the internal state of the system. Hence, the task of validation is often a much higher dimensional problem to solve than for conventional systems, leading to a major expansion in the number of states of a system that may need to be tested. 
 %
-Field testing, often the traditional approach to validating systems in their target environments, is likely to be prohibitively expensive for autonomous systems, if a high degree of coverage or statistical confidence is required for safety assurance. This has led to much interest and research into the use of driving simulators\footnote{Examples include: \url{https://www.rfpro.com} and \url{http://carla.org}} for safety validation. Simulation offers the possibility to exercise at least the decision-making logic of a system over a wide range of simulated conditions, and at accelerated rates compared to real-time physical testing. However, the exponential expansion of states associated with autonomy problems\todo[inline]{autonomy problems - is this politically correct, i.e. ``problems''?} can also lead to infeasible testing time and resource usage even for simulators. So, care must be taken to ensure simulators are used efficiently and effectively, obtaining as much validation information as possible and getting to the important test conditions that provide key information about the safety properties of a system as fast as possible, rather than by `brute force' approaches such as statistical testing.
+Field testing, often the traditional approach to validating systems in their target environments, is likely to be prohibitively expensive for autonomous systems, if a high degree of coverage or statistical confidence is required for safety assurance. This has led to much interest and research into the use of driving simulators\footnote{Examples include \url{https://www.rfpro.com} and \url{http://carla.org}.} for safety validation. Simulation offers the possibility to exercise at least the decision-making logic of a system over a wide range of simulated conditions, and at accelerated rates compared to real-time physical testing. However, the exponential expansion of states associated with autonomy problems\todo[inline]{autonomy problems - is this politically correct, i.e. ``problems''?} can also lead to infeasible testing time and resource usage even for simulators. So, care must be taken to ensure simulators are used efficiently and effectively, obtaining as much validation information as possible and getting to the important test conditions that provide key information about the safety properties of a system as fast as possible, rather than by `brute force' approaches such as statistical testing.
 
 We are interested, therefore, in test methodologies that incorporate the classification, measurement and evaluation of a system's situated behaviour. One such approach is based on the specification of situated behavioural properties as \emph{assertions}, logical expressions that can be applied at some or even all steps of a simulation session\todo[inline]{or at runtime, so I'd take this out from ``at some'' up to here} to monitor the behaviour of the system under test and to report any property violations. 
 %
@@ -68,7 +68,7 @@ All the works discussed earlier are limited to detecting the occurrence of some 
 
 \section{System Architecture for Assertion-based Monitoring} \label{generic_architecture}
 
-The evaluation of assertions requires an appropriate environment to generate vehicle data, and apply the safety assertions to interpret the driving situation. This section presents the generic components and software architecture we have deployed to support assertion-based monitoring either in simulation or operational modes.
+The evaluation of assertions requires an environment to generate vehicle data, and apply the safety assertions to interpret the driving situation. This section presents the generic components and software architecture we have deployed to support assertion-based monitoring either in simulation or operational modes.
 
 \subsection{Simulation Environment} \label{generic_sim_system}
 
@@ -79,26 +79,28 @@ The evaluation of assertions requires an appropriate environment to generate veh
     \label{fig:SimulatorArchitecture}
 \end{figure}
 
-  Figure \ref{fig:SimulatorArchitecture} shows a layout for a simulation-based testbench that indicates the context in which the assertions database subsystem is used:\todo[inline]{Should the figure not also include assertion coverage?}
+  Figure~\ref{fig:SimulatorArchitecture} shows a layout for a simulation testbench that indicates the context in which the assertions database subsystem is used:\todo[inline]{Should the figure not also include assertion coverage?}
 
   \begin{itemize}
+\todo[inline]{Why subsystem? Can we not just use the name of the respective box(es)?}
       \item The \emph{Experiment Instantiation} subsystem generates test scenarios derived from the \emph{Experiment Specification} which may include test objectives or requirements (defined in natural language). This subsystem identifies the \emph{Static} information about the environment (e.g. maps, road features) and \emph{Dynamic} descriptions of the behaviour required of simulated actors (vehicles, other road users, traffic lights, any third-party agents necessary to the test requirement). 
       The experimental configuration determines the test case that will contribute coverage towards the assertion.\todo[inline]{Nothing said yet about coverage.}
       \item The \emph{Simulator} subsystem interacts with the \emph{AV Control} subsystem - although for the purposes of this paper a dummy controller is used that can be set to pass or fail assertions to demonstrate the full extent of the assertion-based safety validation approach. The simulator used is the CARLA simulator\footnote{\url{https://carla.org/}}, but in principle this could be exchanged for other simulators with only moderate effort.
       \item The \emph{Data Capture} subsystem records relevant simulation data about the driving situation of the AV, including actor positions and road network information, and at each time step of the simulation writes this information into the records of the database to be used for assertion checking.\todo[inline]{Should there not be a DB symbol (looks like a tin) to show the database we are sourcing?}
       \item The \emph{Assertion Checker} subsystem together with the \emph{Assertions} library constitute the test \emph{Oracle}. These subsystems evaluate all assertions relevant to the driving situation defined at each step of the simulation. The \emph{Outputs} are a a set of Pass/Fail declarations which can be used to annotate the simulation log or be recorded in a separate file if desired.\todo[inline]{Should there not be a DB symbol to represent the assertion library, i.e.\ a set of SQL queries?}
   \end{itemize}
-  We will focus on describing the assertion oracle in greater detail in the remainder of this paper.\todo[inline]{add the relevant section}\todo[inline]{Really, the ``Simulator'' interfaces with the ``Data Collector'', which writes to a ``Simulation Log'' DB. There is also an Assertion DB. The Assertion Checker sources both the ``Simulation Log'' DB and the ``Assertion'' DB. There is enough space to do this, as follows: Experimental Instantiation -> Experimental \\ Instantiation and make box smaller, this means the LHS occupies less space. Move ``Data Collector'' into that space. Add DB to RHS of Data Collector - this results in two DB icons on RHS. }
+  We will focus on describing the assertion oracle in greater detail in the remainder of this paper.\todo[inline]{add the relevant section}\todo[inline]{Really, the ``Simulator'' interfaces with the ``Data Collector'', which writes to a ``Simulation Log'' DB. There is also an Assertion DB. The Assertion Checker sources both the ``Simulation Log'' DB and the ``Assertion'' DB. There is enough space to do this, as follows: Experimental Instantiation -change to- Experimental \\ Instantiation and make box smaller, this means the LHS occupies less space. Move ``Data Collector'' into that space. Add DB to RHS of Data Collector - this results in two DB icons on RHS or one with two parts, one for the log data and one for the assertions/queries. }
 
-\subsection{Runtime Monitoring}
-The basic argument underlying our approach to assertion-based runtime monitoring is that the assertions we have developed for checking in the geospatial database can also be utilised during runtime to act as a reference model and monitor the AV during operation.
-The same Assertion Checking and Assertions library subsystem contained in Figure \ref{fig:SimulatorArchitecture} can also be used in runtime monitoring mode. The external system architecture required to achieve this is illustrated in Figure \ref{fig:RuntimeArchitecture}. In this architecture, the external subsystems comprise:
+\subsection{Operational Monitoring}
+The basic argument underlying our approach to assertion-based monitoring during operation is that the assertions we have developed for checking in the geospatial database can also be utilised to act as a reference model and monitor the vehicle during operation.
+%
+Thus, the same Assertion Checker and Assertions contained in Figure~\ref{fig:SimulatorArchitecture} can also be used in operational monitoring mode. The external system architecture required to achieve this is illustrated in Figure~\ref{fig:RuntimeArchitecture}. In this architecture, the external subsystems comprise:
 \begin{itemize}
-    \item \emph{AV Sensors}: this subsystem acquires real-time information from the vehicle's sensors.
-    \item \emph{Feature extraction}: the data obtained from AV sensors are processed to provide a trace equivalent to that used in simulations, so that the assertion checking subsystem used in simulations can also be applied to runtime monitoring.
-    \item \emph{Data capture}: similarly to the simulator architecture in Figure \ref{fig:SimulatorArchitecture}, the data describing the AV's environment is captured and stored in a database for subsequent assertion checking.
-    \item \emph{Assertion Checking} and \emph{Assertions} library: this subsystem is essentially identical to that of the simulation testbench architecture in Figure \ref{fig:SimulatorArchitecture}, evaluating the relevant assertions and generating a pass or a fail verdict~\cite{RuntimeReview} as an output. 
-    In some applications, there may be differences in the deployment (as shown in Figure \ref{fig:RuntimeArchitecture}) compared to the simulation testbench, where the system would be deployed on embedded hardware. These applications include operational data recording for further processing or possibly its use as a real-time reward for online learning processes.
+    \item The \emph{AV Sensors} acquire real-time information from the vehicle's sensors.
+    \item During \emph{Feature Extraction}, the data obtained from AV sensors are processed to provide a trace equivalent to that obtained from simulations, so that the \emph{Assertion Checker} can also be applied to operational monitoring.\todo[inline]{Ensure same style as prev. figure, i.e. ``Feature Extraction'' - same for remaining items.}
+    \item \emph{Data Capture}: similarly to the simulator architecture in Figure \ref{fig:SimulatorArchitecture}, the data describing the vehicle's environment is captured and stored in a database for subsequent assertion checking.\todo[inline]{Check with Greg re calling this a DB and the use of a DB symbol in prev. figure.}
+    \item The \emph{Assertion Checker} and \emph{Assertions} library: this subsystem is essentially identical to that of the simulation testbench architecture in Figure \ref{fig:SimulatorArchitecture}, evaluating the relevant assertions and generating a pass or a fail verdict~\cite{RuntimeReview} as an output. 
+    In some applications, there may be differences in the deployment (as shown in Figure~\ref{fig:RuntimeArchitecture}) compared to the simulation testbench, where the system would be deployed on embedded hardware. These applications include operational data recording for further processing or possibly its use as a real-time reward for online learning.
  
 \end{itemize}
 
@@ -108,13 +110,15 @@ The same Assertion Checking and Assertions library subsystem contained in Figure
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.98\linewidth]{../other/figures/RuntimeAssertionsTestBenchArchitectureV6.pdf}
-    \caption{Runtime monitoring architecture}
+    \caption{Operational monitoring architecture}\todo[inline]{Revise to match new version of Fig. 1}
     \label{fig:RuntimeArchitecture}
 \end{figure}
 
 
 \subsection{Geospatial Database for Assertion Checking} \label{geospatial_database}
-To develop logical assertions derived from UKHC rules, we need a suitable programming language into which they can be translated. Two aspects are important to the choice. First, as we discuss later in the document, the rules and guidelines written in the UKHC are written for human readers not automatic systems. They consist of sets of discrete rules applicable to specific issues of road user behaviour, which must be taken collectively, and not necessarily always in a particular order, to form the legally required profile of behaviour. This suggests that a declarative programming language, such as Prolog or SQL, may provide an easier and more easily validated means of encoding rules than more familiar procedural languages such as the C family. Second, we are interested in processing the data produced by driving simulator programs, so we seek languages that handle large data sets naturally, where the assertions we develop constitute formal operations on datasets corresponding to the logical properties we extract from the UKHC rules. Taking these two requirements into consideration, SQL emerges as the most suitable commonly available programming language, having all the properties mentioned as well as being supported by many publicly available databases and software development environments. SQL has been demonstrated formally \cite{sqllibkin} to be sufficiently expressive to be able to encode useful problems such as state or graph reachability as well as all standard problems in relational algebra, albeit with the use of some of its later extensions such as recursive operators. Safety properties can be defined in terms of reachability \cite{guiochet2015, masson2019} or (in-)stability \cite{harper2005, xue2020} of desirable (goal) and undesirable (hazardous) situated states, so the ability of SQL to express such problems in a general sense is another important capability. For all these reasons, therefore, we have selected SQL-based database technology as the framework for our assertion-based validation oracle. 
+To develop assertions derived from UKHC rules, we need a formal language into which they can be translated for automatic checking. Two aspects are important to the choice. First, as we discuss later, the rules and guidelines in the UKHC are written for human readers not automatic systems. They consist of sets of discrete rules applicable to specific aspects of road user behaviour, which must be taken collectively, and not necessarily always in a particular order, to form the legally required profile of behaviour. This suggests that a declarative programming language, such as Prolog or SQL, may provide an easier and more easily validated means of encoding rules than more familiar procedural languages such as the C family. 
+%
+Second, we are interested in processing the data produced during driving, so we seek languages that handle large data sets naturally, where the assertions we develop constitute formal operations on datasets corresponding to the logical properties we extract from the UKHC rules. Taking these two requirements into consideration, SQL emerges as the most suitable commonly available programming language, having all the properties mentioned as well as being supported by many publicly available databases and software development environments. SQL has been demonstrated formally~\cite{sqllibkin} to be sufficiently expressive to be able to encode useful problems such as state or graph reachability as well as all standard problems in relational algebra, albeit with the use of some of its later extensions such as recursive operators. Safety properties can be defined in terms of reachability~\cite{guiochet2015, masson2019} or (in-)stability~\cite{harper2005, xue2020} of desirable (goal) and undesirable (hazardous) situated states, so the ability of SQL to express such problems in a general sense is another important capability. For these reasons, we have selected SQL-based database technology as the framework for our assertion-based oracle. 
 
 The technical challenge then becomes how to compare the state of the vehicle against the assertion or safety property. We argue that a geospatial relational database is well suited to the task for formal reasoning about the vehicle properties against a set of assertions. The vehicle state can be easily stored and accessed and additional insights, such as dynamic properties, can also be derived from this base information. A database system, such as PostgreSQL, can record, access and perform assertion checks upon this state information quickly and reliably and is especially useful considering libraries that make use of geographical shape objects, e.g. PostGIS. 
 
